2023-04-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha02: Indictment Excitement';git push
	git tag -a 5.1.6-alpha02 -m 'all: fix NCZarr overwrite/removal;	ncremap cpl dmn, tms prs, non-spatial lrv';git push --tags

	* ncremap support non-spatial dimensions (temporal, spectral, constituent) for all vertical grid types

	* ncremap support vertical interpolation of timeseries data from pure-pressure to pure-pressure grids

2023-04-02  Charlie Zender  <zender@uci.edu>

	* ncremap add nco_vrt_grd_sng() to debug prs->prs issues

2023-03-31  Charlie Zender  <zender@uci.edu>

	* ncremap add --col_nm

	* ncremap/ncclimo remove alcf mira, add e3sm.ess.uci.edu

2023-03-30  Charlie Zender  <zender@uci.edu>

	* ncremap add coupler x-dimension names as unstructured dimension candidates

	* ncremap/ncclimo add prc_typ='cpl' option stub

2023-03-29  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo cease printing example Panoply instructions

2023-03-22  Charlie Zender  <zender@uci.edu>

	* Note that ERWG 8.4.1 from Conda-Forge fails due to not being built with PIO

	* Treat all datasets as CF-compliant (to carry associated coordinate variables and multi-dimensional associate coordinates)

2023-03-21  Charlie Zender  <zender@uci.edu>

	* ncremap add x2[aglro]_n[xy] dimensions and dom[lr]_[lat/lon] variables for coupler land and river domains to database

	* ncremap correct lon/lat dimension keys in error HINT

	* Hint that error code -137, "NetCDF: NCZarr error" can be a NCZarr codec decompression issue

2023-03-14  Charlie Zender  <zender@uci.edu>

	* Call nco_fl_rm(fl_ncz) not nco_fl_rm(fl_psx)

	* Fix nco_drc_ncz_rm() to attempt nc_open(ncz_fl) not nc_open(psx_fl)

	* NCO 5.1.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha01: Baltimore';git push
	git tag -a 5.1.6-alpha01 -m 'Functionally identical to 5.1.5';git push --tags

	* Update supported netCDF library versions
