@@ -1,6 +1,6 @@
 nco (5.1.6-1) unstable; urgency=low
 
-  * new upstream version fxm:  
+  * new upstream version fxm:
 
  -- Charlie Zender <zender@uci.edu> Tue, 13 Jun 2023 12:26:03 -0700
 
